--- a/portfolio.html
+++ b/portfolio.html
@@ -13,24 +13,39 @@
 </head>
 <body>
     <!-- Header section -->
-    <header class="global-header"> 
+
+    <header class="global-header">
         <a href="index.html" class="logo-header"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
 
-        <div class="nav-container">
+    <div class="nav-container">
         <nav class="main-navigation">
         <ul>
-            <li><a href="index.html">Studio</a></li>
-            <li><a href="portfolio.html" class="current">Portfolio</a></li>
+            <li class="studio-border"><a href="index.html" class="current">Studio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="#">Contacts</a></li>
         </ul>
-     </nav>
-
+        </nav>
+    
      <div class="contact-container">
-     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-     <a href="tel:+1-212-772-4150">+1-212-772-4150</a>
+        <div class="contact-mail">
+        <svg class="icon" width="16px">
+            <use href="./images/icons.svg#icon-mail"></use>
+        </svg>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </div>
+
+        <div class="contact-telephone">
+        <svg class="icon" width="16px">
+            <use href="./images/icons.svg#icon-telephone"></use>
+        </svg>
+        <a href="tel:+1-212-772-4150">+1-212-772-4150</a>
+        </div>
+        
      </div>
     </div>
     </header>
+
+
     <!-- Main section -->
     <main>
         <section>
