--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
     <div class="nav-container">
         <nav class="main-navigation">
         <ul>
-            <li class="studio-border"><a href="index.html" class="current">Studio</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="index.html">Studio</a></li>
+            <li><a href="portfolio.html" class="current">Portfolio</a></li>
             <li><a href="#">Contacts</a></li>
         </ul>
         </nav>
@@ -113,6 +113,8 @@
 
         <!-- Footer section -->
     <footer>
+        <div class="footer-parent-container">
+            <div class="footer-child-container">
         <div class="footer-logo">
         <a href="index.html"><span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span></a>
         </div>
@@ -124,8 +126,37 @@
             <br>
             <a href="tel:+1-212-772-4150">+1-212-772-4150</a>
             </p>
-        </div>
+        
         </address>
+        </div>
+
+        <div class="footer-child-container">
+            <h4>FIND US ON</h4>
+            <ul>
+                <li>
+                    <svg width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram-footer"> </use>
+                    </svg>
+                </li>
+                <li>
+                    <svg width="20px" height="20px"> 
+                        <use href="./images/icons.svg#icon-twitter-footer"> </use>
+                    </svg>
+                </li>
+                <li>
+                    <svg width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-facebook-footer"> </use>
+                    </svg>
+                </li>
+                <li>
+                    <svg width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-linkedin-footer"> </use>
+                    </svg>
+                </li>
+            </ul>
+                
+        </div>
+        </div>
 
 
     </footer>
